--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "timer",
   "version": "0.1.0",
+  "homepage": "https://qdimanche.github.io/timer/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "gsap": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
