--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^18.2.0",
     "react-hover-video-player": "^9.7.0",
     "react-icons": "^4.4.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar": "^8.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
