--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://qdimanche.github.io/timer/",
   "private": true,
   "dependencies": {
+    "@ashthornton/asscroll": "^2.0.11",
     "@emailjs/browser": "^3.6.2",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -12,15 +13,17 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
     "gsap": "^3.11.0",
+    "locomotive-scroll": "^4.1.4",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hover-video-player": "^9.7.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
+    "react-locomotive-scroll": "^0.2.2",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "smooth-scrollbar": "^8.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
