--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.0.21",
+    "axios": "^1.1.0",
     "gh-pages": "^4.0.0",
     "gsap": "^3.11.0",
     "locomotive-scroll": "^4.1.4",
@@ -20,6 +22,7 @@
     "react-hover-video-player": "^9.7.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-locomotive-scroll": "^0.2.2",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
