--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.21",
     "axios": "^1.1.0",
+    "blazy": "^1.8.2",
     "gh-pages": "^4.0.0",
-    "gsap": "^3.11.0",
+    "gsap": "^3.11.3",
+    "imagesloaded": "^5.0.0",
     "locomotive-scroll": "^4.1.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "vanilla-lazyload": "^17.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
